CSS Fixes for portfolio chart spacing and default font size (fixes #1006 again)

--- a/app/components/Dashboard/PortfolioPanel/PortfolioPanel.scss
+++ b/app/components/Dashboard/PortfolioPanel/PortfolioPanel.scss
@@ -11,7 +11,6 @@
 
     .chart {
       flex: 0 0 auto;
-      margin-top: -25px;
     }
 
     .table {
