--- a/app/styles/main.global.scss
+++ b/app/styles/main.global.scss
@@ -14,7 +14,7 @@ input {
   box-sizing: border-box;
   width: 100%;
   height: 100%;
-  font: normal 10px Montserrat, 'Montserrat', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+  font-family: 'Montserrat', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 }
 
 body {
